# Transformation-Visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  temp.cpp
src/: main.cpp
src/Core/: Core.cpp  Core.hpp
src/GUI/: gui.cpp  gui.h
src/Math/: Math.cpp  Math.hpp
src/Matrix/: Matrix.cpp  Matrix.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Shapes/: Shapes.cpp  Shapes.hpp
src/Transformations/: Transformations.cpp  Transformations.hpp
src/UI/: UI.cpp  UI.hpp
